src/index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");

:root {
  --max-width: 1350px;

  font-size: 14px;
  font-family: "Nunito", sans-serif;
  font-weight: 300;
}

:root[data-theme="light"] {
  --color-bg: hsl(0, 0%, 98%);
  --color-text: hsl(200, 15%, 8%);
  --color-element: hsl(0, 0%, 100%);
  --color-input: hsl(0, 0%, 52%);
  --color-shadow: hsla(0, 0%, 0%, 0.15);
}

:root[data-theme="dark"] {
  --color-bg: hsl(207, 26%, 17%);
  --color-text: hsl(0, 0%, 100%);
  --color-element: hsl(209, 23%, 22%);
  --color-input: var(--color-text);
  --color-shadow: hsla(0, 0%, 0%, 0.15);
}

html {
  background-color: var(--color-bg);
  color: var(--color-text);
}

#root {
  display: flex;
  flex-direction: column;
  min-height: 100svh;
}
main {
  flex-grow: 1;
}

.header-wrapper {
  background-color: var(--color-element);
  padding-block: 30px 32px;
  box-shadow: 0 0 12px 0 var(--color-shadow);
}

.header {
  display: flex;
  justify-content: space-between;
}

h1 {
  font-size: 18px;
  font-weight: 800;
}

.btn {
  border: none;
  background: none;
  cursor: pointer;
  color: var(--color-text);
  font-weight: 500;
  font-size: 16px;
  line-height: 1;
}

.ui-component {
  background-color: var(--color-element);
  border-radius: 4px;
  box-shadow: 0 0 12px 0 var(--color-shadow);
  color: var(--color-text);
  border: none;
  padding-inline: 24px;
  padding-block: 18px;
}

.back-btn {
  margin-block: 78px;
  display: inline-flex;
  align-items: center;
  gap: 8px;

  padding-block: 14px;
  padding-inline: 32px;
}

.centered {
  max-width: 500px;
  margin-inline: auto;
  padding-inline: 24px;
}

.sr-only {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.hidden {
  display: none;
}

.dark-mode-btn {
  display: flex;
  gap: 10px;
  align-items: center;
}

.search-bar {
  display: flex;
  padding-top: 48px;
  justify-content: flex-begin;
  flex-direction: column;
  gap: 40px;
}

.search-box {
  display: grid;
  color: var(--color-input);
}

.search-box > *:nth-child(1) {
  grid-row-start: 1;
  grid-column-start: 1;
  align-self: center;
}

.search-box > *:nth-child(2) {
  grid-row-start: 1;
  grid-column-start: 1;
}

.search-icon {
  /* padding-inline: 0; */
  /* font-size: 20px; */
  padding-inline: 30px;
  cursor: text;
  position: relative;
  /* z-index: 99; */
}

.search-field {
  padding-left: 76px;
  color: var(--color-input);
}

.region-select {
  /* hacky way to add padding to the select arrow .. wont work otherwise */
  border-right: 16px solid transparent;
  cursor: pointer;
}

option {
  padding: 1000px;
}

.country-list {
  margin-block: 60px;

  display: grid;
  grid-template-columns: repeat(1, auto);

  /* display: flex; */
  /* flex-wrap: wrap; */
  /* justify-content: center; */
  gap: 40px;
}

.country-entry {
  background-color: var(--color-element);
  border-radius: 4px;
  box-shadow: 0 0 12px 0 var(--color-shadow);
  overflow: hidden;

  /* width: 264px; */
  cursor: pointer;

  transform: scale(1);

  transition-property: transform;
  transition-duration: 300ms;
  transition-timing-function: ease;
}

.country-entry:hover {
  transform: scale(1.05);
}

.country-link {
  color: var(--color-text);
}

/* .country-link * { */
/* user-select: none; */
/* outline: 1px solid lime; */
/* } */

.country-flag {
  aspect-ratio: 320/213;
  object-fit: cover;
  width: 100%;
}

.country-desc {
  padding: 30px 26px;
}

h2 {
  font-weight: 800;
  font-size: 18px;
  margin-bottom: 22px;
}

strong {
  font-weight: 500;
}

.country-stats {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.country-information h1 {
  font-size: 24px;
}

.country-details {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 16px;
}

.country-details li {
  margin-bottom: 6px;
}

.neighbors {
  margin-block: 50px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.neighbors strong {
  min-width: fit-content;
}

.neighbor-list {
  display: inline;
  width: auto;
  position: relative;
  top: -4px;
}

.neighbor-list:has(.no-neighbor) {
  /* position: relative; */
  top: 0;
}

.neighbor-list li {
  display: inline-block;
  margin-right: 8px;
  margin-bottom: 8px;
}

.neighbor-btn {
  display: inline-block;
  padding-block: 8px;
}

.footer {
  display: grid;
  place-items: center;
}

.attribution {
  /* padding-block: 40px; */
}

.inline-link {
  font-weight: 500;
  color: var(--color-text);
  position: relative;
}

.inline-link::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  height: 1px;
  width: 0%;
  background-color: var(--color-text);

  transition-property: width;
  transition-duration: 300ms;
  transition-timing-function: ease;
}

.inline-link:hover::after {
  width: 100%;
}

.error {
  text-align: center;
  margin-block: 3em;
}

.error p {
  margin-bottom: 8px;
}

.error h1 {
  font-size: 500%;
}

.details-holder {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin-bottom: 78px;
}

.details-holder img {
  width: 560px;
  margin-bottom: 24px;
  object-fit: contain;
  object-position: top;
}

.details-holder h1 {
  margin-bottom: 28px;
}

@media (min-width: 768px) {
  h1 {
    font-size: 24px;
  }

  .search-bar {
    flex-direction: row;
    justify-content: space-between;
    gap: 0;
  }

  .search-box {
    min-width: 450px;
  }

  .details-holder {
    flex-direction: row;
    gap: clamp(32px, -209.8462px + 24.6154vw, 120px);
  }

  .neighbors {
    flex-direction: row;
  }

  .centered {
    max-width: var(--max-width);
    padding-inline: 36px;
  }

  .country-list {
    /* gap: 74px; */
    gap: clamp(40px, -20.4444px + 7.8704vw, 74px);
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 992px) {
  .country-list {
    /* grid-template-columns: repeat(3, minmax(0, auto)); */
  }
}

@media (min-width: 1200px) {
  .country-details {
    grid-template-columns: repeat(2, 1fr);
  }
  .country-list {
    gap: 74px;
    grid-template-columns: repeat(4, 1fr);
  }
}

